--- a/TSD_lab_2c_GSFP.ipynb
+++ b/TSD_lab_2c_GSFP.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "IXQ3r71Aovg1"
       },
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,7 +137,7 @@
         },
         "outputId": "4d4f56fc-e7c4-414b-91ed-68dbc347f353"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
         },
         "outputId": "1ab0e634-d89a-4fe7-ffb5-580f9b11d82a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -378,7 +378,7 @@
         },
         "outputId": "76fbf550-599c-45bf-cefc-1f45ed6221e1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -435,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "yWTI5LngS7iS"
       },
@@ -464,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "WZ8E3GMAALY4"
       },
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "fczstxNS1hZa"
       },
@@ -511,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -542,7 +542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -724,7 +724,7 @@
         "id": "w5kRACxWHGQk",
         "outputId": "a41916c1-b03e-4ed9-92b0-1b58e1f42b28"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +809,7 @@
         },
         "outputId": "12a9b1c4-f2b5-4663-98ae-e6c1fca92029"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +857,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "yCrafVhm-uNo"
       },
@@ -902,7 +902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "Fa9wK-79-uNp",
         "outputId": "905c426a-6960-4bfa-eb20-9530d8ac5c8b",
@@ -931,7 +931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "W9UDYzc4-uNq",
         "outputId": "def9753c-0391-4ae4-f2a7-b86dd42d4f20",
@@ -965,7 +965,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "Zb1VX8W0-uNq",
         "outputId": "af07bfbb-2642-460a-e24b-753156aaf615",
@@ -994,7 +994,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "j2dFfJN7-uNq",
         "outputId": "80b8549a-1bbf-4397-f89e-061bbae4fdd3",
@@ -1054,7 +1054,7 @@
         },
         "outputId": "4b19a4a0-ac5c-4f16-d8fd-44b0ea165e33"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1091,7 +1091,7 @@
         "id": "IQDVzsFkXFJv",
         "outputId": "81870df9-9189-4111-c997-077fbba13f95"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1139,7 +1139,7 @@
         "id": "d9-9KRpAXL_-",
         "outputId": "4b2d90ac-e787-4b70-c3f9-69fee89f8abc"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1182,7 +1182,7 @@
         "id": "ZdJatKfQXPf2",
         "outputId": "2083bd5d-af5d-45d4-ec79-36f57c13b6fe"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1279,7 +1279,7 @@
         },
         "outputId": "05bb4ad1-49e2-4cf0-caad-b0986fa11f3d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1332,193 +1332,66 @@
     {
       "cell_type": "code",
       "source": [
-        "# Исходные данные\n",
-        "investment = 100_000  # инвестиция клиента (рубли)\n",
-        "current_price = 100   # текущая цена акции (рубли)\n",
-        "protection_level = 0.7  # уровень защиты капитала (70%)\n",
+        "# Ввод данных\n",
+        "initial_price = 100  # P0, текущая цена акции\n",
+        "loss_threshold = 0.3  # Уровень потерь\n",
+        "barrier_price = initial_price * (1 - loss_threshold)  # Барьерная цена\n",
+        "investment = 100000  # Инвестиция в рублях\n",
+        "time_period = 1  # Срок в годах\n",
         "\n",
-        "# Защищённая стоимость актива\n",
-        "protected_value = investment * protection_level\n",
+        "# Предполагаемый рост цены актива через год\n",
+        "expected_growth_rate = 0.2  # 20% рост\n",
+        "final_price = initial_price * (1 + expected_growth_rate)\n",
         "\n",
-        "# Коэффициент участия\n",
-        "participation_coefficient = investment / protected_value\n",
+        "# Вычисление коэффициента участия (PR)\n",
+        "# Учитываем отношение прибыли от роста актива к цене с учетом барьера\n",
+        "profit_from_growth = final_price - initial_price\n",
+        "potential_loss = initial_price - barrier_price\n",
         "\n",
-        "participation_coefficient\n"
+        "participation_rate = profit_from_growth / potential_loss\n",
+        "\n",
+        "result_text = f\"\"\"\n",
+        "Результаты расчётов:\n",
+        "\n",
+        "1. Барьерная цена (уровень риска): {barrier_price:.2f} руб.\n",
+        "   Клиент готов принять потери до 30% от текущей стоимости актива.\n",
+        "\n",
+        "2. Ожидаемая цена актива через год: {final_price:.2f} руб.\n",
+        "   Сценарий предполагает рост базового актива на 20%.\n",
+        "\n",
+        "3. Коэффициент участия: {participation_rate:.2%}\n",
+        "   Клиент получит 67% от прироста стоимости актива, снижая риск потерь.\n",
+        "\"\"\"\n",
+        "\n",
+        "print(result_text)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "dwV-uURWJYSV",
-        "outputId": "694632ae-6bfc-4b68-d50c-c9af569568a9"
+        "id": "mmuu2t4NrTy4",
+        "outputId": "7b427f8f-4e7d-4d84-ed04-b995ac6e0b99"
       },
-      "execution_count": 25,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.4285714285714286"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 25
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Исходные данные\n",
-        "P0 = 100          # начальная цена акции\n",
-        "PT = 120          # ожидаемая цена через год\n",
-        "S0 = 100000       # сумма инвестиций\n",
-        "S_loss = 30000    # возможные потери\n",
-        "\n",
-        "# Расчет коэффициента участия\n",
-        "Ku = 1 / (1 + (P0 / PT) * (S_loss / S0))\n",
-        "Ku\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ICT2C9ZWJYuJ",
-        "outputId": "74a93ab8-b84b-463d-86c9-3a57edc2b42c"
-      },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.8"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 26
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "from scipy.stats import norm\n",
-        "\n",
-        "# Исходные данные\n",
-        "S0 = 100  # начальная цена акции (руб)\n",
-        "K = 100   # страйк опциона (руб)\n",
-        "T = 1     # срок опциона (год)\n",
-        "sigma = 0.2  # волатильность (20%)\n",
-        "r = 0.05  # безрисковая ставка (5% годовых)\n",
-        "investment = 100_000  # инвестиция (руб)\n",
-        "max_loss = 0.3 * investment  # максимальная потеря (руб)\n",
-        "knock_in = 90  # включающий барьер (руб)\n",
-        "knock_out = 130  # выключающий барьер (руб)\n",
-        "\n",
-        "# Расчет d1 и d2 для модели Black-Scholes\n",
-        "def d1(S, K, T, r, sigma):\n",
-        "    return (np.log(S / K) + (r + 0.5 * sigma**2) * T) / (sigma * np.sqrt(T))\n",
-        "\n",
-        "def d2(d1, sigma, T):\n",
-        "    return d1 - sigma * np.sqrt(T)\n",
-        "\n",
-        "# Расчет стоимости опциона call по модели Black-Scholes\n",
-        "def call_option_price(S, K, T, r, sigma):\n",
-        "    d1_val = d1(S, K, T, r, sigma)\n",
-        "    d2_val = d2(d1_val, sigma, T)\n",
-        "    return S * norm.cdf(d1_val) - K * np.exp(-r * T) * norm.cdf(d2_val)\n",
-        "\n",
-        "# Стоимость базового call-опциона\n",
-        "call_price = call_option_price(S0, K, T, r, sigma)\n",
-        "\n",
-        "# Определение коэффициента участия\n",
-        "# Условие: максимальные потери ограничены\n",
-        "participation_coefficient = (investment - max_loss) / call_price\n",
-        "\n",
-        "call_price, participation_coefficient\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "X1HKy1mkJj77",
-        "outputId": "3685bee7-e2d4-40d4-fbc4-f77fb9fdaf6f"
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(10.450583572185565, 6698.190538019942)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "from scipy.stats import norm\n",
-        "\n",
-        "# Исходные данные\n",
-        "P0 = 100  # Текущая цена акции (рублей)\n",
-        "I = 100000  # Инвестиции (рублей)\n",
-        "max_loss = 0.3  # Максимальная потеря (%)\n",
-        "T = 1  # Срок (год)\n",
-        "sigma = 0.2  # Волатильность (%)\n",
-        "r = 0.05  # Безрисковая ставка (%)\n",
-        "P_KI = 120  # Цена барьера для knock-in (пример)\n",
-        "P_KO = 80  # Цена барьера для knock-out (пример)\n",
-        "\n",
-        "# Вычисляем дельту барьера (включаемый барьер knock-in)\n",
-        "def barrier_price_knock_in(S0, K, T, sigma, r):\n",
-        "    d1 = (np.log(S0 / K) + (r + 0.5 * sigma ** 2) * T) / (sigma * np.sqrt(T))\n",
-        "    d2 = d1 - sigma * np.sqrt(T)\n",
-        "    return S0 * norm.cdf(d1) - K * np.exp(-r * T) * norm.cdf(d2)\n",
-        "\n",
-        "# Стоимость \"выключаемого\" барьера knock-out\n",
-        "def barrier_price_knock_out(S0, K, T, sigma, r):\n",
-        "    d1 = (np.log(S0 / K) + (r + 0.5 * sigma ** 2) * T) / (sigma * np.sqrt(T))\n",
-        "    d2 = d1 - sigma * np.sqrt(T)\n",
-        "    return S0 * norm.cdf(-d1) - K * np.exp(-r * T) * norm.cdf(-d2)\n",
-        "\n",
-        "# Стоимость барьера\n",
-        "knock_in_value = barrier_price_knock_in(P0, P_KI, T, sigma, r)\n",
-        "knock_out_value = barrier_price_knock_out(P0, P_KO, T, sigma, r)\n",
-        "\n",
-        "# Стоимость участия с учетом ограничений\n",
-        "participation_value = I * (1 - max_loss)  # Инвестиции после потерь\n",
-        "participation_cost = knock_in_value - knock_out_value\n",
-        "\n",
-        "# Коэффициент участия\n",
-        "participation_rate = participation_value / participation_cost\n",
-        "\n",
-        "knock_in_value, knock_out_value, participation_rate\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xiYjREugKKyy",
-        "outputId": "8f629006-440b-4353-b6fb-65e6dfb63c30"
-      },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(3.2474774165608125, -0.6871894039848714, 17790.578768824947)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Результаты расчётов:\n",
+            "\n",
+            "1. Барьерная цена (уровень риска): 70.00 руб.\n",
+            "   Клиент готов принять потери до 30% от текущей стоимости актива.\n",
+            "\n",
+            "2. Ожидаемая цена актива через год: 120.00 руб.\n",
+            "   Сценарий предполагает рост базового актива на 20%.\n",
+            "\n",
+            "3. Коэффициент участия: 66.67%\n",
+            "   Клиент получит 67% от прироста стоимости актива, снижая риск потерь.\n",
+            "\n"
+          ]
         }
       ]
     }
