--- a/TSD_lab_2c_GSFP.ipynb
+++ b/TSD_lab_2c_GSFP.ipynb
@@ -1332,65 +1332,68 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ввод данных\n",
-        "initial_price = 100  # P0, текущая цена акции\n",
-        "loss_threshold = 0.3  # Уровень потерь\n",
-        "barrier_price = initial_price * (1 - loss_threshold)  # Барьерная цена\n",
-        "investment = 100000  # Инвестиция в рублях\n",
-        "time_period = 1  # Срок в годах\n",
+        "import numpy as np\n",
+        "from scipy.stats import norm\n",
         "\n",
-        "# Предполагаемый рост цены актива через год\n",
-        "expected_growth_rate = 0.2  # 20% рост\n",
-        "final_price = initial_price * (1 + expected_growth_rate)\n",
+        "# Входные параметры\n",
+        "S = 100  # текущая цена акции\n",
+        "K = 100  # страйк-цена\n",
+        "T = 1  # срок опциона в годах\n",
+        "sigma = 0.2  # волатильность (предполагаемая)\n",
+        "r = 0.05  # безрисковая ставка\n",
+        "barrier = 70  # барьер (knock-in, 30% ниже текущей цены)\n",
+        "investment = 100000  # сумма инвестиций\n",
         "\n",
-        "# Вычисление коэффициента участия (PR)\n",
-        "# Учитываем отношение прибыли от роста актива к цене с учетом барьера\n",
-        "profit_from_growth = final_price - initial_price\n",
-        "potential_loss = initial_price - barrier_price\n",
+        "# Количество дискретных наблюдений\n",
+        "n_obs = 4  # квартальные наблюдения\n",
+        "dt = T / n_obs  # интервал между наблюдениями\n",
         "\n",
-        "participation_rate = profit_from_growth / potential_loss\n",
+        "# Расчёт стоимости европейского опциона call по формуле Блэка-Шоулза\n",
+        "def black_scholes_call(S, K, T, sigma, r):\n",
+        "    d1 = (np.log(S / K) + (r + 0.5 * sigma**2) * T) / (sigma * np.sqrt(T))\n",
+        "    d2 = d1 - sigma * np.sqrt(T)\n",
+        "    call_price = S * norm.cdf(d1) - K * np.exp(-r * T) * norm.cdf(d2)\n",
+        "    return call_price\n",
         "\n",
-        "result_text = f\"\"\"\n",
-        "Результаты расчётов:\n",
+        "# Вероятность пробития барьера (knock-in) с учётом дискретных наблюдений\n",
+        "def knock_in_probability(S, barrier, sigma, T, n_obs):\n",
+        "    p = 0\n",
+        "    for i in range(1, n_obs + 1):\n",
+        "        t = i * T / n_obs\n",
+        "        prob = norm.cdf((np.log(S / barrier) - (r - 0.5 * sigma**2) * t) / (sigma * np.sqrt(t)))\n",
+        "        p += prob\n",
+        "    return p / n_obs\n",
         "\n",
-        "1. Барьерная цена (уровень риска): {barrier_price:.2f} руб.\n",
-        "   Клиент готов принять потери до 30% от текущей стоимости актива.\n",
+        "# Стоимость барьерного опциона\n",
+        "def barrier_option_price(S, K, T, sigma, r, barrier, n_obs):\n",
+        "    vanilla_call = black_scholes_call(S, K, T, sigma, r)\n",
+        "    knock_in_prob = knock_in_probability(S, barrier, sigma, T, n_obs)\n",
+        "    return vanilla_call * knock_in_prob\n",
         "\n",
-        "2. Ожидаемая цена актива через год: {final_price:.2f} руб.\n",
-        "   Сценарий предполагает рост базового актива на 20%.\n",
+        "# Расчёт стоимости барьерного опциона\n",
+        "barrier_option_cost = barrier_option_price(S, K, T, sigma, r, barrier, n_obs)\n",
         "\n",
-        "3. Коэффициент участия: {participation_rate:.2%}\n",
-        "   Клиент получит 67% от прироста стоимости актива, снижая риск потерь.\n",
-        "\"\"\"\n",
+        "# Расчёт коэффициента участия (PR)\n",
+        "PR = K * barrier_option_cost / investment\n",
         "\n",
-        "print(result_text)\n",
-        "\n"
+        "print('Цена опциона: ', barrier_option_cost)\n",
+        "print('Коэффициент участия: ', PR * 100)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "mmuu2t4NrTy4",
-        "outputId": "7b427f8f-4e7d-4d84-ed04-b995ac6e0b99"
+        "id": "X3gcsRNs5185",
+        "outputId": "8489b48f-334e-4f1a-95b8-11989b550c6a"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "Результаты расчётов:\n",
-            "\n",
-            "1. Барьерная цена (уровень риска): 70.00 руб.\n",
-            "   Клиент готов принять потери до 30% от текущей стоимости актива.\n",
-            "\n",
-            "2. Ожидаемая цена актива через год: 120.00 руб.\n",
-            "   Сценарий предполагает рост базового актива на 20%.\n",
-            "\n",
-            "3. Коэффициент участия: 66.67%\n",
-            "   Клиент получит 67% от прироста стоимости актива, снижая риск потерь.\n",
-            "\n"
+            "Цена опциона:  10.225571998613859\n",
+            "Коэффициент участия:  1.0225571998613858\n"
           ]
         }
       ]
