update 1 lab and last labs

--- a/TSD_Lab_final_GSFP.ipynb
+++ b/TSD_Lab_final_GSFP.ipynb
@@ -45,7 +45,50 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Для выполнения вашего задания сначала необходимо задать основные параметры опциона “Autocallable” и использовать модельные данные, поскольку информация о ценах базовых активов отсутствует. Далее мы последовательно выполним следующие шаги:\n",
+        "Процесс моделирования результатов для структурированного продукта \"Autocallable\", основная задача которого — управление инвестициями с определенными барьерами для купонов и досрочного погашения. Вот упрощенное объяснение:\n",
+        "\n",
+        "1. **Что такое Autocallable?**\n",
+        "   - Это финансовый инструмент, где доходность (например, купоны) и возможность досрочного погашения зависят от цен нескольких базовых активов (в данном случае — 4 актива: A, B, C, D).\n",
+        "   - Если цены активов преодолевают определенные уровни (барьеры), продукт может досрочно погаситься или выплатить купоны.\n",
+        "\n",
+        "2. **Основные параметры:**\n",
+        "   - Инвестируемая сумма: начальная сумма вложений.\n",
+        "   - Купонная ставка: проценты, которые инвестор получает при выполнении условий.\n",
+        "   - Барьеры:\n",
+        "     - **Call Barrier** (105%): уровень для досрочного погашения.\n",
+        "     - **Coupon Barrier** (98%): уровень для выплаты купонов.\n",
+        "     - **Delivery Barrier** (90%): уровень для \"эффекта поставки\" (снижение выплат).\n",
+        "\n",
+        "3. **Сценарии:**\n",
+        "   - Если активы **превышают 105%** начальной стоимости — происходит досрочное погашение, инвестор получает всю сумму и купоны.\n",
+        "   - Если активы **находятся выше 98%**, но ниже 105% — выплачиваются только купоны.\n",
+        "   - Если цены падают ниже 90% — инвестор может потерять часть своих денег.\n",
+        "\n",
+        "4. **Расчеты:**\n",
+        "   - Моделируется динамика цен активов на основе случайных значений.\n",
+        "   - Определяетеся \"наихудший\" актив (worst-of), поскольку результат обычно зависит от актива с наихудшей динамикой.\n",
+        "   - Для сравнения используется \"средняя\" динамика (average-of), где результаты сглаживаются за счет усреднения цен.\n",
+        "\n",
+        "5. **Графики:**\n",
+        "   - Графики отображают динамику цен активов и уровни барьеров, что помогает визуально понять, как активы ведут себя относительно условий продукта.\n",
+        "\n",
+        "6. **Результаты:**\n",
+        "   - На основе модельных данных рассчитывается финансовый результат:\n",
+        "     - При худшей динамике (worst-of) результат оказывается ниже, чем при усредненной (average-of).\n",
+        "   - Показан \"эффект поставки\" для случаев, когда активы сильно падают.\n",
+        "\n",
+        "7. **Почему это важно?**\n",
+        "   - Это позволяет инвесторам оценить риски и доходность продукта.\n",
+        "   - Аналитики используют такие модели для понимания потенциальных сценариев и последствий."
+      ],
+      "metadata": {
+        "id": "h-itrFUm_Q_T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Для выполнения задания сначала необходимо задать основные параметры опциона “Autocallable” и использовать модельные данные, поскольку информация о ценах базовых активов отсутствует. Далее мы последовательно выполним следующие шаги:\n",
         "\n",
         "### 1. **Основные параметры:**\n",
         "- **Сумма инвестирования:** 5 млн руб.\n",
@@ -73,22 +116,7 @@
         "### 5. **Метод average-of performance:**\n",
         "Расчеты будут повторены для средней динамики активов.\n",
         "\n",
-        "Начнем с задания модельных данных о динамике цен активов (A, B, C, D). Затем произведем расчеты.\n",
-        "\n",
-        "**Результаты:**\n",
-        "\n",
-        "1. **Модельная динамика цен активов:**\n",
-        "   - Worst-of (актив с наибольшим снижением) не превышал барьер отзыва (105%) ни на одну из дат наблюдения.\n",
-        "   - На всех купонных датах купоны запоминаются, так как цены активов ниже купонного барьера (98%).\n",
-        "\n",
-        "2. **Финансовый результат на 25-04-2023:**\n",
-        "   - Финансовый результат при выполнении условий составляет **4,424,701 руб.**, с учетом «эффекта поставки» (пропорциональное снижение исходной суммы).\n",
-        "\n",
-        "3. **График:**\n",
-        "   На графике отображены:\n",
-        "   - Динамика активов (A, B, C, D).\n",
-        "   - Worst-of performance (наихудший актив).\n",
-        "   - Уровни барьеров (call, coupon, delivery)."
+        "Начнем с задания модельных данных о динамике цен активов (A, B, C, D). Затем произведем расчеты."
       ],
       "metadata": {
         "id": "FO-oymbSt439"
@@ -209,6 +237,28 @@
           "execution_count": 1
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Результаты:**\n",
+        "\n",
+        "1. **Модельная динамика цен активов:**\n",
+        "   - Worst-of (актив с наибольшим снижением) не превышал барьер отзыва (105%) ни на одну из дат наблюдения.\n",
+        "   - На всех купонных датах купоны запоминаются, так как цены активов ниже купонного барьера (98%).\n",
+        "\n",
+        "2. **Финансовый результат на 25-04-2023:**\n",
+        "   - Финансовый результат при выполнении условий составляет **4,424,701 руб.**, с учетом «эффекта поставки» (пропорциональное снижение исходной суммы).\n",
+        "\n",
+        "3. **График:**\n",
+        "   На графике отображены:\n",
+        "   - Динамика активов (A, B, C, D).\n",
+        "   - Worst-of performance (наихудший актив).\n",
+        "   - Уровни барьеров (call, coupon, delivery)."
+      ],
+      "metadata": {
+        "id": "NyjOBy3C_AoE"
+      }
     },
     {
       "cell_type": "code",
