--- a/TSD_lab_1_GSFP.ipynb
+++ b/TSD_lab_1_GSFP.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "SV9_PP9ODnNx"
       },
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "fdqsF3oYDnN2"
       },
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "VFCKs9NQ9u5r"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
         "id": "JabInvcIoADV",
         "outputId": "8d7d7716-317a-40a3-c5a6-41a08b0c81fb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -332,7 +332,7 @@
         "id": "zE0PSAsJzXYO",
         "outputId": "9b6a73a9-13b6-423b-a252-74d1a581a4df"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -392,7 +392,7 @@
       "metadata": {
         "id": "ITuZgnB2AOqP"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "m14PTR27AZ1n"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -557,7 +557,7 @@
         "id": "crHqF4Ql56dH",
         "outputId": "d7b4ca8e-a2df-46f6-b3bd-9114853853fd"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +605,7 @@
         },
         "outputId": "07780229-e01c-4deb-a59e-a85d6ad6cec1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -646,7 +646,7 @@
         "id": "1FgOMu-P7_Bv",
         "outputId": "7dc86aaa-e7bf-4703-af03-3fc52a68f6ec"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,7 +694,7 @@
         "id": "RozrtiI88OKL",
         "outputId": "085a7526-18e1-474f-c998-d4a4e6560dbd"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -742,7 +742,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "HMT5BW6kDnNz"
       },
@@ -779,7 +779,7 @@
       "metadata": {
         "id": "rVIt_XGBTZGp"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -794,12 +794,12 @@
       "metadata": {
         "id": "OpnZK65_cTQB"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "jSRpL7hMDnN1"
       },
@@ -832,7 +832,7 @@
         },
         "outputId": "f1406d87-a14f-474e-beca-315a00273e50"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +846,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -942,7 +942,7 @@
       "metadata": {
         "id": "qsGvxOhv_Bxl"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -956,7 +956,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "MtCZFUfVDnN1"
       },
@@ -999,7 +999,7 @@
         "id": "yARulRsi_s90",
         "outputId": "a5d7d285-44f2-4259-baa3-3e96d45721c5"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1094,7 +1094,7 @@
       "metadata": {
         "id": "k03ndjXNA7I2"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1143,7 +1143,7 @@
         "id": "zrSq5NMYB6xA",
         "outputId": "0211e79d-a558-4192-fc95-8a3933e6a036"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1228,7 +1228,7 @@
         },
         "outputId": "e10e5c22-5e8b-45c3-ef03-628687f5755e"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1287,6 +1287,59 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. Стратегия \"Продажа бабочки\" (Short Butterfly):\n",
+        "\n",
+        "Эта стратегия относится к типу сложных опционных конструкций и представляет собой продажу \"опционной бабочки\" (Butterfly Spread). Основная идея стратегии – заработать на низкой волатильности актива, если цена базового актива остаётся в пределах узкого диапазона.\n",
+        "\n",
+        "Состав стратегии:\n",
+        "\n",
+        "- Продажа 1 опциона колл с низким страйком (или пут, если стратегия построена на опционах пут).\n",
+        "- Покупка 2 опционов колл (или пут) с центральным страйком.\n",
+        "- Продажа 1 опциона колл с высоким страйком (или пут).\n",
+        "\n",
+        "Особенности:\n",
+        "\n",
+        "- Прибыль достигается, если базовый актив остаётся вблизи центрального страйка к моменту экспирации.\n",
+        "- Убыток возникает при значительном отклонении цены базового актива вверх или вниз.\n",
+        "- Ограниченный потенциал прибыли и убытка."
+      ],
+      "metadata": {
+        "id": "wY5ePZDL8m2m"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Синтетический короткий фьючерс (Synthetic Short Futures):\n",
+        "\n",
+        "Эта стратегия создаёт позицию, эквивалентную короткому фьючерсу (short futures), но с использованием опционов. Она предполагает одновременное открытие позиций по опционам пут и колл на одном и том же базовом активе с одинаковыми страйком и датой экспирации.\n",
+        "\n",
+        "Состав стратегии:\n",
+        "\n",
+        "- Продажа опциона колл.\n",
+        "- Покупка опциона пут.\n",
+        "\n",
+        "Особенности:\n",
+        "\n",
+        "Стратегия используется, когда трейдер ожидает падения цены базового актива.\n",
+        "Если цена базового актива падает, стоимость купленного опциона пут увеличивается, обеспечивая прибыль, а убытки от проданного опциона колл компенсируются.\n",
+        "\n",
+        "Требует меньшего начального капитала по сравнению с реальной короткой позицией в фьючерсе, так как её выполнение связано с использованием опционов.\n",
+        "\n",
+        "Пример: Если базовый актив торгуется по $100:\n",
+        "\n",
+        "Продаётся колл со страйком $100.\n",
+        "Покупается пут со страйком $100.\n",
+        "\n",
+        "Эта комбинация ведёт себя как короткий фьючерс: убытки происходят, если цена базового актива растёт, а прибыль появляется при падении цены."
+      ],
+      "metadata": {
+        "id": "EYyrcsCW8zR0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -1339,7 +1392,7 @@
         },
         "outputId": "a200ff1f-609b-467b-c506-c76166e88f35"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1372,7 +1425,7 @@
       "metadata": {
         "id": "S0E62J6FG2-T"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1391,7 +1444,7 @@
       "metadata": {
         "id": "LszCWZwhG4w1"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1412,7 +1465,7 @@
       "metadata": {
         "id": "6ZqLO5gJG6QP"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1436,7 +1489,7 @@
         "id": "tOm55Nr5G75G",
         "outputId": "34a4e5e8-7e9a-4b02-b609-a78fcf2002b3"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1461,7 +1514,7 @@
       "metadata": {
         "id": "coc8pLw-G-QQ"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1479,7 +1532,7 @@
       "metadata": {
         "id": "53vPsFiBHAc0"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1503,7 +1556,7 @@
         "id": "_KJt8J6tHB2e",
         "outputId": "1b1f99e6-fdc2-4b36-b369-d0b8c4f6b60f"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1630,7 +1683,7 @@
         },
         "outputId": "1b49d508-864c-4cc0-ce85-4e0732dce685"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
